<resources>
    <string name="app_name">HabitTracker</string>
    <string name="title_following">Following</string>
    <string name="title_follower">Follower</string>
    <string name="title_users">Users</string>
    <string name="title_profile">Profile</string>
    <string name="title_request">Requests</string>
    <string name="title_home">Habits</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_habits_today">Habits Today</string>
    <string name="title_habits_unbroken">Habits Unbroken</string>
    <string name="title_habits">Habits</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_edit_habit">EditHabitActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_habit_event">ViewHabitEventActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>