<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_habit_events"
        android:icon="@drawable/ic_baseline_calendar_24"
        android:title="Habit Events" />


    <item
        android:id="@+id/navigation_request"
        android:icon="@drawable/ic_following_black_24dp"
        android:title="@string/title_request" />

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/title_users" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />

</menu>