<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.habittracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_habit_events"
        android:name="com.example.habittracker.ui.habitEvents.HabitEventFragment"
        android:label="Habit Events"
        tools:layout="@layout/fragment_habit_event" />

    <fragment
        android:id="@+id/navigation_users"
        android:name="com.example.habittracker.ui.users.UsersFragment"
        android:label="@string/title_users"
        tools:layout="@layout/fragment_following_list" />

    <fragment
        android:id="@+id/navigation_following"
        android:name="com.example.habittracker.ui.requests.RequestFragment"
        android:label="@string/title_following"
        tools:layout="@layout/fragment_following_list" />

    <fragment
        android:id="@+id/navigation_follower"
        android:name="com.example.habittracker.ui.follow.FollowersFragment"
        android:label="@string/title_follower"
        tools:layout="@layout/fragment_follower" />


    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.habittracker.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>